<resources>
    <string name="app_name">爱深圳</string>
    <string name="app_logo">网聚深圳自媒体力量</string>
    <string name="news">新闻</string>
    <string name="video">视频</string>
    <string name="user">我</string>
    <string name="category_headline">头条</string>
    <string name="category_shenzhen">深圳</string>
    <string name="category_nanshan">南山</string>
    <string name="category_futian">福田</string>
    <string name="category_play">娱乐</string>
    <string name="category_sport">体育</string>
    <string name="category_art">艺术</string>
    <string name="category_finance">金融</string>
    <string name="category_trurism">旅游</string>

    <string name="user_login">立即登录</string>
    <string name="user_collection">收藏</string>
    <string name="user_nightmode">夜间</string>
    <string name="user_setting">设置</string>
    <string name="user_mycomment">我的评论</string>
    <string name="user_feedback">反馈</string>

    <string name="login_login">登录</string>
    <string name="login_username">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_register">快速注册?</string>
    <string name="login_forgetpassword">忘记密码</string>
    <string name="login_thirdpartylogins">其他登录方式</string>

    <string name="news_comment">写评论……</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
