<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/login_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/login_login"
            android:textColor="@color/background1"
            android:textSize="@dimen/login_login_size" />

    </RelativeLayout>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_button"
        android:layout_marginRight="@dimen/login_button"
        android:layout_marginTop="@dimen/login_button"
        android:background="@drawable/editshape_username"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_button"
        android:layout_marginLeft="@dimen/login_button"
        android:layout_marginRight="@dimen/login_button"
        android:background="@drawable/editshape_password"
        android:hint="@string/login_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_button"
        android:layout_marginLeft="@dimen/login_button"
        android:layout_marginRight="@dimen/login_button"
        android:background="@drawable/editshape_login"
        android:text="@string/login_login"
        android:textColor="@color/background1"
        android:textSize="@dimen/login_button_login" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_button"
        android:layout_marginLeft="@dimen/login_button"
        android:layout_marginRight="@dimen/login_button"
        android:background="@drawable/editshape_register"
        android:text="@string/login_register"
        android:textColor="@color/theme"
        android:textSize="@dimen/login_button_login" />

    <TextView
        android:id="@+id/editText_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/login_forgetpassword"
        android:hint="@string/login_forgetpassword"
        android:textColor="@color/text0"
        android:textSize="@dimen/login_forgetpassword_size" />

    <LinearLayout
        android:id="@+id/thirdpartylogins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editText_otherlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login_thirdpartylogins"
            android:textColor="@color/text0"
            android:textSize="@dimen/login_thirdpartylogins" />

        <LinearLayout
            android:id="@+id/imageView_thirdpartylogins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/login_thirdpartyloginstop"
            android:paddingLeft="@dimen/login_thirdpartyloginsleft"
            android:paddingRight="@dimen/login_thirdpartyloginsright"
            android:paddingBottom="@dimen/login_thirdpartyloginsbuttom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@mipmap/qq"/>

            <ImageView
                android:id="@+id/imageView_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@mipmap/weixin"/>

            <ImageView
                android:id="@+id/imageView_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@mipmap/weibo"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>