<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tool_bar2"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:background="@color/background1"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/tool_bar2_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/imageView_news"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_news" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/news" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tool_bar2_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/imageView_video"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_movie" />

        <TextView
            android:id="@+id/text_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/video" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tool_bar2_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/imageView_user"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_user" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user" />
    </LinearLayout>
</LinearLayout>